# remote_compilation_helper

./: .codecov.yml  .gitignore  AGENTS.md  AGENTS_INTRODUCTION.md  CHANGELOG.md  Cargo.toml  PLAN_RICH_RUST_INTEGRATION.md  PLAN_TO_MAKE_REMOTE_COMPILATION_HELPER.md  README.md  UPGRADE_LOG.md  claude-upgrade-progress.json  install.sh  manifest_index.sh  rust-toolchain.toml
.beads/: issues.jsonl
.claude/skills/rch/: SKILL.md
.claude/skills/rch/references/: COMMANDS.md  TROUBLESHOOTING.md  (+1 more)
.claude/skills/remote-compilation-helper-setup/: SKILL.md
.github/workflows/: ci.yml  dependabot-automerge.yml  notify-acfs.yml  release-automation.yml  release.yml
.ntm/human_inbox/: 2026-01-26_20-12-32_agent_crashed.md
.ntm/pids/: cm-remote_compilation_helper.pid
docs/: QUICKSTART.md  RICH_OUTPUT_MIGRATION.md  TESTING.md  TROUBLESHOOTING.md
docs/adr/: 001-unix-socket-ipc.md  002-zstd-compression.md  003-circuit-breaker.md  004-toml-configuration.md  005-shell-hooks.md
docs/agent/: ERRORS.md
docs/api/: error-codes.md
docs/architecture/: classifier.md
docs/extending/: custom-worker-selection.md
docs/guides/: circuit-breaker.md  configuration.md  monitoring.md  test-logging-audit.md  verification.md  workers.md
docs/observability/: grafana-dashboard.json  prometheus-alerts.yaml
rch/: Cargo.toml
rch-common/: Cargo.toml
rch-common/proptest-regressions/: proptest_tests.txt  ssh.txt
rch-common/src/: artifact_verify.rs  binary_hash.rs  lib.rs  logging.rs  mock.rs  patterns.rs  patterns_security_test.rs  proptest_tests.rs  protocol.rs  remote_compilation.rs  repro_bug.rs  ssh.rs  ssh_timeout_test.rs  ssh_utils.rs  test_change.rs  toolchain.rs  types.rs  util.rs
rch-common/src/api/: error.rs  mod.rs  response.rs
rch-common/src/config/: dotenv.rs  env.rs  mod.rs  profiles.rs  source.rs  validate.rs
rch-common/src/e2e/: fixtures.rs  harness.rs  logging.rs  mod.rs  test_workers.rs  verification.rs
rch-common/src/errors/: catalog.rs
rch-common/src/testing/: log.rs  mod.rs
rch-common/src/ui/: context.rs  display.rs  error.rs  icons.rs  mod.rs  theme.rs
rch-common/src/ui/errors/: build.rs  config.rs  mod.rs  network.rs
rch-common/src/ui/progress/: celebrate.rs  compile.rs  mod.rs  pipeline.rs  spinner.rs  tests.rs  transfer.rs
rch-common/tests/: dependabot_automerge_workflow.rs  readme_regressions.rs  smoke.rs
rch-telemetry/: Cargo.toml
rch-telemetry/src/: lib.rs  main.rs  protocol.rs  speedscore.rs
rch-telemetry/src/benchmarks/: cpu.rs  error.rs  memory.rs  mod.rs  network.rs  retry.rs
rch-telemetry/src/collect/: disk.rs  mod.rs  network.rs
rch-telemetry/src/storage/: mod.rs  schema.rs
rch-wkr/: Cargo.toml
rch-wkr/src/: cache.rs  executor.rs  main.rs
rch/src/: cache.rs  commands.rs  completions.rs  config.rs  doctor.rs  error.rs  hook.rs  hook_windows.rs  main.rs  status_display.rs  status_types.rs  toolchain.rs  transfer.rs
rch/src/agent/: detect.rs  hook.rs  types.rs
rch/src/commands/: agents.rs  config.rs  config_doctor.rs  config_init.rs  daemon.rs  helpers.rs  hook.rs  init.rs  mod.rs  queue.rs  speedscore.rs  status.rs  types.rs  workers.rs  workers_deploy.rs  workers_init.rs
rch/src/fleet/: audit.rs  dry_run.rs  executor.rs  history.rs  mod.rs  preflight.rs  progress.rs  rollback.rs  ssh.rs
rch/src/state/: exit_codes.rs  lock.rs  mod.rs  primitives.rs
rch/src/tui/: app.rs  event.rs  mod.rs  state.rs  status.rs  test_data.rs  test_harness.rs  widgets.rs
rch/src/ui/: adaptive.rs  benchmark.rs  config.rs  console.rs  context.rs  markdown.rs  mod.rs  probe.rs  progress.rs  status.rs  style.rs  styled.rs  test_utils.rs  theme.rs  workers.rs  writer.rs
rch/src/update/: check.rs  download.rs  install.rs  lock.rs  mod.rs  types.rs  verify.rs
rch/tests/: audit_e2e.rs  compile_context.rs  e2e_fleet.rs  e2e_hook.rs  hook_integration.rs  stream_isolation.rs  ui_integration.rs
rch/tests/common/: assertions.rs  logging.rs  mod.rs
rch/tests/integration/: command_tests.rs
rch/tests/support/: factories.rs  mock_terminal.rs  mod.rs  snapshots.rs
rchd/: Cargo.toml
rchd/src/: alerts.rs  api.rs  benchmark_queue.rs  benchmark_scheduler.rs  cache_cleanup.rs  cleanup.rs  config.rs  events.rs  health.rs  history.rs  http_api.rs  main.rs  reload.rs  selection.rs  self_test.rs  telemetry.rs  workers.rs
rchd/src/metrics/: budget.rs  latency.rs  mod.rs  tracing.rs
rchd/src/ui/: banner.rs  jobs.rs  metrics.rs  mod.rs  shutdown.rs  workers.rs
rchd/tests/: daemon_lifecycle.rs  e2e_daemon.rs  e2e_multi_worker.rs  e2e_pipeline.rs  e2e_self_test.rs  e2e_worker.rs  stability.rs
rchd/tests/e2e/: mod.rs
rchd/tests/integration/: mod.rs
scripts/: analyze_test_logs.sh  e2e_api_envelope.sh  e2e_api_error_codes.sh  e2e_bd-2ga8.sh  e2e_bd-2m7j.sh  e2e_bd-3i0q.sh  e2e_bd-c7xr.sh  e2e_bd-szio.sh  e2e_bd-x1ek.sh  e2e_bd-zked.sh  e2e_bd-zp4j.sh  e2e_config_inspect.sh  e2e_install_test.sh  e2e_output_validation.sh  e2e_project_sync.sh  e2e_test.sh  install_prompt_unit_test.sh  test-bootstrap.sh  test-installer-linux.sh  test_dependabot_automerge_workflow.sh  test_lib.sh  test_stream_isolation.sh  test_telemetry_dashboard.py
scripts/lib/: test_framework.sh
tests/: manifest_sync_test.sh
tests/e2e/: test_output_validation.sh  test_self_healing.sh
tests/true_e2e/: artifact_tests.rs  build_rs_fixture_tests.rs  cargo_bench_tests.rs  cargo_build_tests.rs  cargo_check_clippy_tests.rs  cargo_nextest_tests.rs  cargo_test_tests.rs  config.rs  error_recovery_tests.rs  exit_code_tests.rs  failopen_tests.rs  mod.rs  output.rs  performance_tests.rs  ssh_command_tests.rs  ssh_tests.rs
web/: package-lock.json  package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: api.ts  chart-utils.test.ts  chart-utils.ts  comparison-utils.test.ts  comparison-utils.ts  rchd-client.ts  types.ts
web/tests/a11y/: accessibility.spec.ts
web/tests/e2e/: builds.spec.ts  dashboard.spec.ts  metrics.spec.ts  navigation.spec.ts  speedscore.spec.ts
web/tests/fixtures/: api-mocks.ts  test-utils.ts
web/tests/visual/: screenshots.spec.ts
(+58 files in other folders)
