[workspace]
resolver = "3"
members = [
    "rch",
    "rchd",
    "rch-wkr",
    "rch-common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Remote Compilation Helper Contributors"]
repository = "https://github.com/Dicklesworthstone/remote_compilation_helper"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# String search (SIMD-accelerated)
memchr = "2.7"

# Unicode text handling
unicode-width = "0.2"

# Regex for pattern matching
regex = "1.11"

# Fast hashing
blake3 = "1.5"

# Compression
zstd = "0.13"

# Time formatting for mock transport logging
chrono = { version = "0.4", features = ["serde"] }

# SSH
openssh = "0.11"

# Configuration
toml = "0.8"
directories = "6.0"
dirs = "6.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7", features = ["fancy"] }

# Interactive CLI prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Markdown rendering
pulldown-cmark = "0.12"

# Internal crates
rch-common = { path = "rch-common" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-dist configuration for automated releases
[workspace.metadata.dist]
cargo-dist-version = "0.26.0"
ci = "github"
# Include all platform-specific binaries in releases
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Generate shell installer for Unix platforms
installers = ["shell", "powershell"]
# SHA256 checksums for verification
checksum = "sha256"
# Include SBOM for supply chain security
cargo-auditable = true
# Build all workspace binaries
all-features = false
# GitHub Releases hosting
hosting = ["github"]
# Tag pattern for releases
tag-namespace = "v"
