[workspace]
resolver = "3"
members = [
    "rch",
    "rchd",
    "rch-wkr",
    "rch-common",
    "rch-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Remote Compilation Helper Contributors"]
repository = "https://github.com/Dicklesworthstone/remote_compilation_helper"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# String search (SIMD-accelerated)
memchr = "2.7"

# Unicode text handling
unicode-width = "0.2"

# Regex for pattern matching
regex = "1.11"

# Fast hashing
blake3 = "1.5"

# Binary/object file parsing (ELF, Mach-O, etc.)
object = { version = "0.38", default-features = false, features = ["read", "elf", "macho"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Random number generation
rand = "0.9"

# Compression
zstd = "0.13"

# Time formatting for mock transport logging
chrono = { version = "0.4", features = ["serde"] }

# Human-friendly duration parsing
humantime = "2.1"

# Cron-style scheduling for daemon tasks
tokio-cron-scheduler = "0.15"
cron = "0.15"

# SSH
openssh = "0.11"

# Configuration
toml = "0.9"
directories = "6.0"
dirs = "6.0"

# Metrics and Observability
prometheus = "0.14"
lazy_static = "1.5"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# HTTP server for metrics endpoint
axum = { version = "0.8", features = ["http1"] }
tower = "0.5"
hyper = { version = "1.5", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7", features = ["fancy"] }

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Markdown rendering
pulldown-cmark = "0.13"

# TUI (Terminal User Interface)
ratatui = "0.29"
crossterm = "0.29"

# Internal crates
rch-common = { path = "rch-common" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-dist configuration for automated releases
[workspace.metadata.dist]
cargo-dist-version = "0.26.0"
ci = "github"
# Include all platform-specific binaries in releases
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Generate shell installer for Unix platforms
installers = ["shell", "powershell"]
# SHA256 checksums for verification
checksum = "sha256"
# Include SBOM for supply chain security
cargo-auditable = true
# Build all workspace binaries
all-features = false
# GitHub Releases hosting
hosting = ["github"]
# Tag pattern for releases
tag-namespace = "v"
