[workspace]
resolver = "3"
members = [
    "rch",
    "rchd",
    "rch-wkr",
    "rch-common",
    "rch-telemetry",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["Remote Compilation Helper Contributors"]
repository = "https://github.com/Dicklesworthstone/remote_compilation_helper"
homepage = "https://github.com/Dicklesworthstone/remote_compilation_helper"
documentation = "https://docs.rs/rch-common"
readme = "README.md"
keywords = ["compilation", "remote", "build", "ai", "agent"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toon-rust = "0.1.3"
schemars = "0.8"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }
clap_complete = { version = "4.5.65", features = ["unstable-dynamic"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

# String search (SIMD-accelerated)
memchr = "2.7.6"

# Unicode text handling
unicode-width = "0.2.2"

# Regex for pattern matching
regex = "1.12.2"

# Fast hashing
blake3 = "1.8.3"

# Binary/object file parsing (ELF, Mach-O, etc.)
object = { version = "0.38.1", default-features = false, features = ["read", "elf", "macho"] }

# UUID generation
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Random number generation
rand = "0.9.2"

# Compression
zstd = "0.13.3"

# Time formatting for mock transport logging
chrono = { version = "0.4.43", features = ["serde"] }

# Human-friendly duration parsing
humantime = "2.3.0"

# Cron-style scheduling for daemon tasks
tokio-cron-scheduler = "0.15.1"
cron = "0.15"

# SSH
openssh = "0.11.6"

# Configuration
toml = "0.9.10"
directories = "6.0"
dirs = "6.0"

# File watching (for hot-reload)
notify = "8.0"

# Metrics and Observability
prometheus = "0.14"
lazy_static = "1.5"

# OpenTelemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# HTTP server for metrics endpoint
axum = { version = "0.8.8", features = ["http1"] }
tower = "0.5"
hyper = { version = "1.8.1", features = ["full"] }

# HTTP client for webhook dispatch
ureq = "3.0"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"
miette = { version = "7.6.0", features = ["fancy"] }

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16.2"

# Markdown rendering
pulldown-cmark = "0.13"

# TUI (Terminal User Interface)
ratatui = "0.30.0"
crossterm = "0.29"

# Rich terminal output (optional, for enhanced UI)
rich_rust = { version = "0.1.1", features = ["full"] }

# Test utilities
ctor = "0.2"

# Internal crates
# Use default-features = false for cross-platform compatibility (rich-ui uses Unix-only rich_rust)
# Crates that need rich-ui should explicitly enable it via features = ["rich-ui"]
rch-common = { path = "rch-common", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-dist configuration for automated releases
[workspace.metadata.dist]
cargo-dist-version = "0.26.0"
ci = "github"
# Include all platform-specific binaries in releases
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Generate shell installer for Unix platforms
installers = ["shell", "powershell"]
# SHA256 checksums for verification
checksum = "sha256"
# Include SBOM for supply chain security
cargo-auditable = true
# Build all workspace binaries
all-features = false
# GitHub Releases hosting
hosting = ["github"]
# Tag pattern for releases
tag-namespace = "v"
