[package]
name = "rch-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for Remote Compilation Helper"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
openssh = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
object = { workspace = true }
shell-escape = "0.1.5"
shellexpand = "3.1"
dirs = { workspace = true }
whoami = "1.5"

[dev-dependencies]
tempfile = "3.19"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { workspace = true }

[[bench]]
name = "classifier"
harness = false

[lints.rust]
# Use "deny" instead of "forbid" to allow tests to manipulate environment variables
# (set_var/remove_var are unsafe in Rust 2024 edition)
unsafe_code = "deny"
