[package]
name = "rch-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types and utilities for Remote Compilation Helper"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
openssh = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
object = { workspace = true }
shell-escape = "0.1.5"
shellexpand = "3.1.1"
dirs = { workspace = true }
toml = { workspace = true }
whoami = "2.0"
uuid = { workspace = true }

# Rich terminal output (optional)
rich_rust = { workspace = true, optional = true }

[features]
default = ["rich-ui"]
rich-ui = ["rich_rust"]

[dev-dependencies]
tempfile = "3.22.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
tracing-subscriber = { workspace = true }
proptest = "1.7.0"

[[bench]]
name = "classifier"
harness = false

[lints.rust]
# Use "deny" instead of "forbid" to allow tests to manipulate environment variables
# (set_var/remove_var are unsafe in Rust 2024 edition)
unsafe_code = "deny"
