[package]
name = "rch-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetry collection for Remote Compilation Helper workers"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3.19"
tokio = { workspace = true }
fastrand = "2.3"
shellexpand = "3.1"
rch-common = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
proptest = "1.4"

[lints.rust]
unsafe_code = "deny"
