[package]
name = "rch-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telemetry collection for Remote Compilation Helper workers"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3.22.0"
tokio = { workspace = true }
fastrand = "2.3"
shellexpand = "3.1.1"
rch-common = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
proptest = "1.7.0"

[lints.rust]
unsafe_code = "deny"
