[package]
name = "rch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - PreToolUse hook CLI"

[[bin]]
name = "rch"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
blake3 = { workspace = true }
shellexpand = "3.1"
dirs = "5"
urlencoding = "2"
colored = "2"
is-terminal = "0.4"
terminal_size = "0.3"
regex = "1"
indicatif = { version = "0.17", features = ["tokio"] }
chrono = { workspace = true }

# Update system dependencies
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
shell-escape = "0.1.5"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
