[package]
name = "rch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - PreToolUse hook CLI"

[[bin]]
name = "rch"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true, features = ["rich-ui"] }
rch-telemetry = { path = "../rch-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toon-rust = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
blake3 = { workspace = true }
shellexpand = "3.1.1"
dirs = { workspace = true }
urlencoding = "2.1.3"
colored = "3.1.1"
unicode-width = { workspace = true }
is-terminal = "0.4.17"
terminal_size = "0.4.3"
regex = "1"
glob = "0.3"
indicatif = { version = "0.18.3", features = ["tokio"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

# Update system dependencies
reqwest = { version = "0.13.1", features = ["json"] }
sha2 = "0.10.9"
shell-escape = "0.1.5"

# State detection dependencies
which = "8"

# LRU cache for classification decisions
lru = "0.16"

# Async stream utilities for parallel operations
futures = "0.3"

# Markdown rendering
pulldown-cmark = { workspace = true }

# Rich terminal output (optional)
rich_rust = { workspace = true, optional = true }

# TUI (Terminal User Interface)
ratatui = { workspace = true }
crossterm = { workspace = true }

# Interactive CLI prompts
dialoguer = { workspace = true }
console = { workspace = true }

[features]
default = ["rich-ui"]
rich-ui = ["rich_rust"]
true-e2e = []

[dev-dependencies]
tempfile = "3.22.0"
proptest = "1.7.0"
insta = "1.42"
serial_test = "3.2"
ctor = "0.2.9"

[[test]]
name = "true_e2e"
path = "../tests/true_e2e/mod.rs"
required-features = ["true-e2e"]

[[test]]
name = "true_e2e_ssh"
path = "../tests/true_e2e/ssh_tests.rs"
required-features = ["true-e2e"]

[lints.rust]
unsafe_code = "forbid"
