[package]
name = "rchd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - Local daemon for worker orchestration"

[[bin]]
name = "rchd"
path = "src/main.rs"

[dependencies]
rch-common = { workspace = true }
rch-telemetry = { path = "../rch-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
openssh = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }

# Metrics and Observability
prometheus = { workspace = true }
lazy_static = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# HTTP server for metrics endpoint
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

[dev-dependencies]
tempfile = "3"
whoami = "1"
rch-common = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
