[package]
name = "rchd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Compilation Helper - Local daemon for worker orchestration"

[[bin]]
name = "rchd"
path = "src/main.rs"
required-features = ["unix-sockets"]

[dependencies]
rch-common = { workspace = true, features = ["rich-ui"] }
rch-telemetry = { path = "../rch-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
openssh = { workspace = true }
humantime = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }

# Metrics and Observability
prometheus = { workspace = true }
lazy_static = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# HTTP server for metrics endpoint
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

# HTTP client for webhook dispatch
ureq = { workspace = true }

# HMAC signing for webhooks
hmac = "0.12"
sha2 = "0.10"

# Rich terminal output (optional)
rich_rust = { workspace = true, optional = true }

[features]
default = ["rich-ui", "unix-sockets"]
rich-ui = ["rich_rust"]
unix-sockets = []

[dev-dependencies]
tempfile = "3.22.0"
whoami = "2"
rch-common = { workspace = true, features = ["rich-ui"] }
proptest = "1.7.0"
ctor = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
